fix(base.scss): update to warmer colors for easier contrast

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,10 +4,10 @@
   --color-fg: #fff;
   --color-white: #fff;
   --color-black: #000;
-  --color-gray: #c0c0c0;
-  --color-red: #f00;
-  --color-blue: #00f;
-  --color-yellow: #ff0;
+  --color-gray: #aeaeae;
+  --color-red: #e57b62;
+  --color-blue: #1a3263;
+  --color-yellow: #f6c324;
   --border-size: 3px;
 }
 
